--- a/style.css
+++ b/style.css
@@ -11,7 +11,11 @@ body {
 	padding: 30px;
 }
 
-h1 {
+.titulo-principal {
+	padding-left: 20px;
+}
+
+.titulo-centralizado {
 	text-align: center;
 }
 
@@ -25,10 +29,6 @@ p {
 
 em strong {
 	color: #FF0000;
-}
-
-h2 {
-	text-align: center;
 }
 
 ul {
